backend/api/tests/integration/snapshots/integration__pro_dev__clone-1.snap
---
source: tests/integration/pro_dev.rs
expression: body
---
{
  "id": "[id]",
  "publishedAt": "2022-06-24T18:35:33.636556Z",
  "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorName": "Bobby Tables",
  "likes": 0,
  "plays": 0,
  "liveUpToDate": false,
  "proDevData": {
    "draftOrLive": "draft",
    "displayName": "pro_dev name1",
    "language": "en",
    "description": "draft test description",
    "lastEdited": "[last_edited]",
    "duration": null,
    "privacyLevel": "public",
    "otherKeywords": "",
    "translatedKeywords": "",
    "translatedDescription": {},
    "cover": {
      "id": "[id]",
      "kind": "Cover",
      "is_complete": true
    },
    "categories": [],
    "additionalResources": "[ids]",
    "units": [
      {
        "id": "[id]",
        "displayName": "prod_dev1 unit 1",
        "description": "Image",
        "imageId": "3095d05e-f2c7-11ea-89c3-3b621dd74a1f"
      },
      {
        "id": "[id]",
        "displayName": "prod_dev1 unit 2",
        "description": "Audio",
        "audioId": "0d2c9c30-3850-11ed-ac6a-9b037f9e2276"
      },
      {
        "id": "[id]",
        "displayName": "prod_dev1 unit 3",
        "description": "URL",
        "link": "https://jigzi.org/"
      }
    ]
  }
}
