backend/api/tests/integration/snapshots/integration__pro_dev__publish_modules-3.snap
---
source: tests/integration/pro_dev.rs
expression: body
---
{
  "id": "[id]",
  "publishedAt": "[published_at]",
  "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorName": "Bobby Tables",
  "likes": 0,
  "plays": 0,
  "liveUpToDate": true,
  "proDevData": {
    "draftOrLive": "live",
    "displayName": "pro_dev name1",
    "language": "en",
    "description": "draft test description",
    "lastEdited": "[last_edited]",
    "duration": null,
    "privacyLevel": "public",
    "otherKeywords": "",
    "translatedKeywords": "",
    "translatedDescription": {},
    "cover": {
      "id": "[id]",
      "kind": "Cover",
      "is_complete": true
    },
    "categories": [],
    "additionalResources": [],
    "units": [
      "9fdfb2b6-983f-11ed-8a4d-d79133f7cc7e",
      "9fdfb4aa-983f-11ed-8a4d-f33ce1bab4aa",
      "9fdfb518-983f-11ed-8a4d-cf629535715a"
    ]
  }
}
